Implementing responsive design for the first page. Adjusted elements and fixed horizontal scrolling for current screen resolutions.

--- a/src/app/loding/lodingStyle.css
+++ b/src/app/loding/lodingStyle.css
@@ -5,7 +5,7 @@
     height: 100vh;
     
 }
-.content{
+.content-p{
     width: 15rem;
     background-color: rgb(221, 221, 221);
     display: flex;
